[package]
name = "rumble"
version = "0.1.0"
authors = ["Hemanth Bollamreddi <blmhemu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"